--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "triplebyte-interview",
+  "name": "boilerplate",
   "version": "1.0.0",
-  "description": "Boilerplate for triplebyte front-end app",
+  "description": "boilerplate for front-end app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
